# Lifeos

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
lifeos/: __init__.py  env.py  models.py  utils.py
server/: app.py
static/: app.js  index.html  login.html  register.html  styles.css
